# indexlink

./: .env.example  .gitignore  ADAPTIVE_DCA_EXPERIMENT_2026-07.md  ADAPTIVE_DCA_THREE_RECHECK_EXPERIMENT_2026-07.md  AGENTS.md  API_MANAGEMENT.md  CHANGE_LOG.md  Cargo.toml  readme.en.md  readme.md
.github/workflows/: rust-ci.yml
apps/server/: Cargo.toml
apps/server/src/: config.rs  main.rs
apps/web/: vite.config.ts
crates/ai-client/: Cargo.toml
crates/ai-client/src/: client.rs  error.rs  lib.rs  mock.rs  news.rs  provider.rs  sentiment.rs
crates/ai-client/tests/: client.rs  news.rs  provider.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  state.rs
crates/api/tests/: decision_preview.rs  decision_records.rs  investment_plans.rs  market_data.rs  market_sentiment.rs  paper_performance.rs  paper_portfolio.rs  signals.rs
crates/broker/src/: lib.rs  opend_session.rs
crates/investment-plans/: Cargo.toml
crates/market-data/: Cargo.toml
crates/market-data/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: decision_records.rs  investment_plans.rs  lib.rs  sqlite.rs  sqlite_decision_records.rs  sqlite_investment_plans.rs  sqlite_paper_performance.rs  sqlite_scheduled_decisions.rs
deployment/: Dockerfile  docker-compose.yml
deployment/aliyun/: README.md  ecs-deploy.sh
docs/: minimum_mvp.md
docs/experiments/: adaptive_dca_backtest_2026-07.md
migrations/: 20260626064200_create_investment_plans.sql
migrations/sqlite/: 20260719194000_create_paper_performance_ledger.sql  20260719203000_create_scheduled_decision_runs.sql
(+36 files in other folders)
