[package]
name = "ai-client"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true
